--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random No Button</title>
+    <title>Pregunta Importante</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">Do you love me?</h2>
-        <img class="gif" alt="gif" src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExbjJvdWZzYXc1NGJ6aGp1cDE3b2dyNnVzOGN1andkMjVrMmRzeGwwZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3OhXBaoR1tVPW/giphy.gif" />
+        <h2 class="question">¿Me amas?</h2>
+        <img class="gif" alt="gif" src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnFxa2xnaGhuMHlrN3BlNTFvMTRlZmRyeDJ3d3k3cnBuODl6cTdjdyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/GiWEowj3nQv9C/giphy.gif" />
         <div class="btn-group">
-            <button class="yes-btn">Yes</button>
+            <button class="yes-btn">Si</button>
             <button class="no-btn">No</button>
         </div>
     </div>
