--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿Me amas?</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Cargar Chart.js -->
+    <title>Pregunta Importante</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1>¿Me amas?</h1>
-    <img src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExdmZxOHZyOXNhZHdmMGt0dXNzd2xobzR4aTd0anR0Mmo2YzNxOWYzcSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xT5LMVVnPqbKhnc3Fm/giphy.gif" alt="Imagen especial" class="imagen">
-
-    <div class="botones">
-        <button id="si-btn">Sí</button>
-        <button id="no-btn">No</button>
+    <div class="wrapper">
+        <h2 class="question">¿Me amas?</h2>
+        <img class="gif" alt="gif" src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnFxa2xnaGhuMHlrN3BlNTFvMTRlZmRyeDJ3d3k3cnBuODl6cTdjdyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/GiWEowj3nQv9C/giphy.gif" />
+        <div class="btn-group">
+            <button class="yes-btn">Si</button>
+            <button class="no-btn">No</button>
+        </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
