--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <div id="flower-container"></div> <!-- Contenedor para las flores -->
     <div class="wrapper">
         <h2 class="question">¿Me amas?</h2>
         <img class="gif" alt="gif" src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnFxa2xnaGhuMHlrN3BlNTFvMTRlZmRyeDJ3d3k3cnBuODl6cTdjdyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/GiWEowj3nQv9C/giphy.gif" />
