--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <img src="flowersBG.gif" alt="Flores Lloviendo"> <!-- Aquí va tu GIF de flores -->
     </div>
     <div class="wrapper">
-        <h2 class="question">¿Me amas?</h2>
+        <h1 class="questionTitle">Antes de empezar hay que estar de acuerdo en algo</h1>
+        <h2 class="question">¿Yo te amo más?</h2>
         <img class="gif" alt="gif" src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnFxa2xnaGhuMHlrN3BlNTFvMTRlZmRyeDJ3d3k3cnBuODl6cTdjdyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/GiWEowj3nQv9C/giphy.gif" />
         <div class="btn-group">
             <button class="yes-btn">Si</button>
