--- a/flores.html
+++ b/flores.html
@@ -1963,8 +1963,8 @@ h1 {
   </body>
 </html>
 
-<script>
-    setTimeout(() => {
-        window.location.href = 'https://matefernandezcc.github.io/agus/';
-    }, 15000);
-</script>
+//<script>
+//    setTimeout(() => {
+//        window.location.href = 'https://matefernandezcc.github.io/agus/';
+//    }, 30000);
+//</script>
